# minidb

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
build-asan/: CTestTestfile.cmake  compile_commands.json  minidb_pageserver
build-asan/Testing/Temporary/: CTestCostData.txt
build-asan/tests/: CTestTestfile.cmake  btree_property_test  config_parse_test  container_test  datetime_parse_test  index_key_btree_test  lock_manager_wait_test  page_store_remote_test  transaction_slots_test  tuple_value_edge_test  wal_buffer_pool_test
build-tsan/: CTestTestfile.cmake  compile_commands.json  minidb  minidb_pageserver
build-tsan/Testing/Temporary/: CTestCheckpoint.txt  CTestCostData.txt  LastTest.log.tmp5a826  LastTest.log.tmpc0cf5
build-tsan/tests/: CTestTestfile.cmake  btree_property_test  config_parse_test  container_test  datetime_parse_test  index_key_btree_test  lock_manager_wait_test  page_store_remote_test  transaction_slots_test  tuple_value_edge_test  wal_buffer_pool_test
build-ubsan/: CTestTestfile.cmake  compile_commands.json  minidb_pageserver
build-ubsan/Testing/Temporary/: CTestCostData.txt
build-ubsan/tests/: CTestTestfile.cmake  btree_property_test  config_parse_test  container_test  datetime_parse_test  index_key_btree_test  lock_manager_wait_test  page_store_remote_test  transaction_slots_test  tuple_value_edge_test  wal_buffer_pool_test
docs/: ACID_TODO.md  ARCHITECTURE.md  CAPABILITY_GAP_CHECKLIST.md  COMPUTE_STORAGE_SEPARATION.md  CONCURRENCY_CONTROL.md  CONFIGURATION_REFERENCE.md  DDL_SEMANTICS.md  INDEX_INTERNALS.md  ISOLATION_LEVELS.md  KNOWN_LIMITATIONS.md  OPTIMIZER_COST_MODEL.md  PERF_OPTIMIZATION.md  QUERY_EXECUTION.md  STORAGE_INTERNALS.md  TRANSACTION_MVCC.md  WAL_RECOVERY_PROTOCOL.md
minidb_data/: catalog.mdbc  minidb.control
minidb_data/tables/: 10.heap
src/: main.cpp  pageserver_main.cpp
src/catalog/: README.md  catalog.cpp  catalog.h
src/common/: README.md  atomic.h  config.h  datetime.cpp  datetime.h  db_config.cpp  db_config.h  defs.h  mutex.cpp  mutex.h  noncopyable.h  resource_manager.cpp  resource_manager.h  sql_types.cpp  sql_types.h  status.h  trace.cpp  trace.h  tuple_key.h
src/concurrency/: README.md  lock_manager.cpp  lock_manager.h
src/container/: README.md  array.h  hash_map.h  linked_list.h  optional.h  queue.h  string.cpp  string.h  unique_ptr.h  utility.h  vector.h
src/database/: README.md  database.cpp  database.h
src/index/: README.md  btree.cpp  btree.h  index_iterator.cpp  index_iterator.h  index_key.cpp  index_key.h
src/network/: README.md  server.cpp  server.h
src/record/: README.md  schema.cpp  schema.h  tuple.cpp  tuple.h  value.cpp  value.h
src/recovery/: README.md  gc.cpp  gc.h  wal.cpp  wal.h
src/repl/: README.md  repl.cpp  repl.h
src/sql/: README.md
src/sql/executor/: README.md  aggregate_executor.cpp  aggregate_executor.h  compiled_predicate.cpp  compiled_predicate.h  delete.cpp  delete.h  distinct_executor.cpp  distinct_executor.h  executor.h  (+32 more)
src/storage/: README.md  buffer_pool.cpp  buffer_pool.h  disk_manager.cpp  disk_manager.h  fsm.cpp  fsm.h  heap_file.cpp  heap_file.h  page.cpp  page.h  page_server.cpp  page_server.h  page_server_rpc.h  page_server_tcp.cpp  page_server_tcp.h  page_store.cpp  page_store.h  remote_page_store_client.cpp  remote_page_store_client.h  shared_memory.cpp  shared_memory.h  shm.cpp  shm.h  visibility_map.cpp  visibility_map.h
src/transaction/: README.md  transaction.cpp  transaction.h  txn_status_log.cpp  txn_status_log.h
tests/: CMakeLists.txt  README.md  alter_table_semantics.sh  btree_property_test.cpp  bug_verify.py  bulk_update_delete_perf.sh  complex_operations.py  comprehensive_test.py  comprehensive_test.sh  concurrent_test.py  concurrent_test.sh  crash_recovery_harness.py  differential_sqlite.py  full_combination_test.py  full_sql_suite.sh  index_delete_rebuild.sh  index_key_btree_test.cpp  large_scale_benchmark.py  load_perf_data.py  lock_manager_wait_test.cpp  mvcc_lock_regression.py  mysql_benchmark.py  optimization_test.py  page_store_remote_test.cpp  perf_benchmark.py  perf_test.py  performance_delivery.sh  performance_optimizations.sh  persistence_and_composite.sh  production_regression.sh  recovery_smoke.sh  remote_page_store.sh  resource_limits.sh  run_all_tests.sh  sql_correctness_matrix.py  sql_keyword_combinations.sh  sql_regression.sh  test_features.sql  test_suite.sql  ultimate_test.py  (+1 more)
tests/acid/atomicity/: clog_status_log.py  commit_durability.py  ddl_implicit_commit.py  index_heap_atomic.py  statement_savepoint.py
tests/acid/consistency/: check_constraint.py  constraints_not_null_default.py  null_three_valued_logic.py  post_recovery_verify.py  varchar_length.py
tests/acid/durability/: checkpoint_barrier.py  crash_recovery_harness.py  ddl_crash_recovery.py  ddl_wal.py  index_state_machine.py  torn_page.py  wal_record_corruption.py  wal_replay_slot_reuse.sh
tests/acid/isolation/: long_snapshot_gc.py  lost_update.py  mvcc_lock_regression.py  mvcc_visibility_matrix.py  phantom_read.py  vacuum_concurrent.py  write_skew.py  write_skew_serializable.py
tests/ddl/: hot_index_semantics.sh
tests/index/: index_unique_matrix.sh  persistence_and_composite.sh
tests/lib/: minidb_testlib.py
tests/performance/: bench.py  performance_paths.sh  profile_bottleneck.py  sqlite_compare_bench.py
tests/regression/: consistency_test.py  lsn_watermark_restart.py  ultimate_test.py  update_halloween.py
tests/sql/: datetime_types.sh  differential_sqlite.py  filter_pushdown.sh  full_sql_suite.sh  join_optimizer.sh  join_syntax_strict.sh  p1_features_test.py  select_empty_list.py  semantic_validation.sh  sql_correctness_matrix.py  sql_keyword_combinations.sh  sql_regression.sh  test_all.sql  test_features.sql  test_suite.sql
tests/unit/: btree_property_test.cpp  config_parse_test.cpp  container_test.cpp  datetime_parse_test.cpp  page_store_remote_test.cpp  transaction_slots_test.cpp  tuple_value_edge_test.cpp
tools/: trace_viewer.html
un3/: minidb.control
(+17 files in other folders)
